--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "#keeping only the necessary columns\n",
-    "df = df[['Title', 'Worldwide Gross', 'Production Budget', 'Release Date', 'Major Genre', 'Director', 'Rotten Tomatoes Rating', 'IMDB Rating', 'IMDB Votes']]\n",
+    "df = df[['Title', 'Worldwide Gross', 'Production Budget', 'Release Date', 'Major Genre', 'Rotten Tomatoes Rating', 'IMDB Rating', 'IMDB Votes']]\n",
     "#renaming some columns\n",
     "df.rename(columns = {'Worldwide Gross' : 'Gross', 'Production Budget' : 'Budget', 'Release Date' : 'Date', 'Major Genre' : 'Genre', 'Rotten Tomatoes Rating' : 'RTRating', 'IMDB Rating' : 'IMDBRating', 'IMDB Votes' : 'IMDBVotes'}, inplace = True)"
    ]
@@ -160,20 +160,20 @@
       "3186         The Legend of Zorro 141475336.0 80000000.0  2005   \n",
       "3187           The Mask of Zorro 233700000.0 65000000.0  1998   \n",
       "\n",
-      "                  Genre         Director  RTRating  IMDBRating  IMDBVotes  \n",
-      "1                   NaN              NaN       nan         6.1     1071.0  \n",
-      "2                 Drama              NaN       nan         6.9      207.0  \n",
-      "3                Comedy              NaN       nan         6.8      865.0  \n",
-      "4                Comedy              NaN       1.3         nan        nan  \n",
-      "5                 Drama              NaN       6.2         3.4      165.0  \n",
-      "...                 ...              ...       ...         ...        ...  \n",
-      "3183             Comedy      Kevin Smith       6.5         7.0    55687.0  \n",
-      "3184  Thriller/Suspense    David Fincher       8.9         nan        nan  \n",
-      "3185          Adventure     Peter Hewitt       0.3         3.4     7424.0  \n",
-      "3186          Adventure  Martin Campbell       2.6         5.7    21161.0  \n",
-      "3187          Adventure  Martin Campbell       8.2         6.7     4789.0  \n",
+      "                  Genre  RTRating  IMDBRating  IMDBVotes  \n",
+      "1                   NaN       nan         6.1     1071.0  \n",
+      "2                 Drama       nan         6.9      207.0  \n",
+      "3                Comedy       nan         6.8      865.0  \n",
+      "4                Comedy       1.3         nan        nan  \n",
+      "5                 Drama       6.2         3.4      165.0  \n",
+      "...                 ...       ...         ...        ...  \n",
+      "3183             Comedy       6.5         7.0    55687.0  \n",
+      "3184  Thriller/Suspense       8.9         nan        nan  \n",
+      "3185          Adventure       0.3         3.4     7424.0  \n",
+      "3186          Adventure       2.6         5.7    21161.0  \n",
+      "3187          Adventure       8.2         6.7     4789.0  \n",
       "\n",
-      "[3187 rows x 9 columns]\n"
+      "[3187 rows x 8 columns]\n"
      ]
     }
    ],
@@ -519,7 +519,7 @@
     }
    ],
    "source": [
-    "#making Genres bar plot\n",
+    "#making Genres Bar Plot\n",
     "plt.figure(figsize=(10, 5))\n",
     "\n",
     "sns.barplot(x = 'Number of Movies', y = 'Genre', saturation = 1, data = genre_numbers_df)\n",
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Number of Movies per Genre Bar Plot  “Oh! Too much DRAMA” \n",
+    "Number of Movies per Genre Barplot  “Oh! Too much DRAMA” \n",
     "\n",
     "The barplot shows some interesting analytics for what kind of movie, Production Companies, prefer to \n",
     "release. \n",
@@ -594,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "exp. Worldwide Gross Histogram\n",
+    "Worldwide Gross Histogram (exponential bins)\n",
     "\n",
     "- Data points are gathered in the left side.\n",
     "\n",
@@ -647,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "exp. IMDB Votes Histogram\n",
+    "IMDB Votes Histogram (exponential bins)\n",
     "\n",
     "- IMDB votes follow exponential regression. \n",
     "\n",
@@ -704,10 +704,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "exp. Worldwide Gross and IMDB Votes Scatterplot\n",
+    "Worldwide Gross and IMDB Votes Scatterplot (exponential bins)\n",
     "\n",
-    "In this scatterplot, it is easy to realize that there is a high positive linear correlation between the revenues and IMDB votes.  \n",
-    "Most data points are clustered together. "
+    "In this scatterplot, it is easy to realize that there is a high positive linear correlation between the revenues and IMDB votes. Most data points are clustered together as x and y axis increases. "
    ]
   },
   {
@@ -985,10 +984,7 @@
    "source": [
     "Rotten Tomatoes Rating and IMDB Rating Scatterplot\n",
     "\n",
-    "As we can see from the Rotten Tomatoes – IMDB Rating Scatterplot there is a strong linear positive correlation between them. \n",
-    "\n",
-    "Small values of RTRating correspond to small values of IMDBRating. Large values of RTRating correspond to large values of IMDBRating.\n",
-    "\n",
+    "As we can see from the Rotten Tomatoes – IMDB Rating Scatterplot there is a strong linear positive correlation between them. Small values of Rotten Tomatoes Rating correspond to small values of IMDB Rating. Large values of Rotten Tomatoes Rating correspond to large values of IMDB Rating.\n",
     "If we take a careful look, we see that when people vote movies under 5 in Rotten Tomatoes, people in IMDB vote (for the same movies) a litle higher. However, when people vote above 6 in Rotten Tomatoes, people in IMDB vote lower than those in Rotten, still above 6."
    ]
   },
@@ -1353,10 +1349,7 @@
     "Mean Worldwide Gross per Genre Barplot\n",
     "\n",
     "Firstly, it is clear that adventure movies are far more profitable than the rest. \n",
-    "Interesting is, that drama movies, the most preferable among production companies, are not that prosperous at all and that is also for comedies. \n",
-    "    \n",
-    "Secondly, the confidence interval for adventure movies is enormous! As it comes 4rth in the production \n",
-    "ranking (checking back on the previous barplot about popularity of genres), the reason seems to be that it has wide dispersion."
+    "Interesting is, that drama movies, the most preferable among production companies, are not that prosperous at all and that is also for comedies. Secondly, the confidence interval for adventure movies is enormous! As it comes 4rth in the production ranking (checking back on the previous barplot about popularity of genres), the reason seems to be that it has wide dispersion."
    ]
   },
   {
@@ -1522,7 +1515,7 @@
     "\n",
     "Scatterplot gives us a first thought that the bigger the budget the better the gross ( le8 vs le9). \n",
     "It follows a weak linear positive correlation, data points are less as budget goes up. \n",
-    "However, most of the data points are gathered in the left down corner.\n"
+    "Most of the data points are clustered in the left down corner.\n"
    ]
   },
   {
@@ -1791,9 +1784,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mean Ratings per Decade catplot\n",
+    "Mean Ratings per Decade 2-Barplot\n",
     "\n",
-    "From this plot, we realise that ratings are higher back in the years that what they are today.\n",
+    "From this plot, we realize that ratings are higher back in the years that what they are today.\n",
     "This catplot gives us more info about the votes as it categorizes them with different colors. \n",
     "Another inference is that IMDB Votes are more symmetric than Rotten Tomatoes votes, which indicates that \n",
     "users think movies are not that bad nowadays, whereas, critics in Rotten Tomatoes seem to be dissapointed \n",
@@ -1838,7 +1831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mean Ratings per Decade pointplot\n",
+    "Mean Ratings per Decade Pointplot\n",
     "\n",
     "Pointplot shows exactly the “line drop” we mentioned above. The red line used to be really high, even higher than the black, and nearby 1985 dropped rappidly under the black one.\n"
    ]
