--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -178,10 +178,8 @@
     }
    ],
    "source": [
-    "#to csv -print to see how clean data looks like\n",
-    "df.to_csv('cleandata_movies.csv', index_label = 'ID')\n",
-    "\n",
-    "print(df)"
+    "#to csv - to see how clean data looks like\n",
+    "df.to_csv('cleandata_movies.csv', index_label = 'ID')"
    ]
   },
   {
@@ -196,9 +194,7 @@
    "source": [
     "#making Production Budget and Gross Dataframe ---for my data mining problem ---\n",
     "budget_gross_df = df[['Gross', 'Budget']]\n",
-    "budget_gross_df = budget_gross_df.dropna()\n",
-    "\n",
-    "#print(budget_gross_df)"
+    "budget_gross_df = budget_gross_df.dropna()"
    ]
   },
   {
@@ -217,9 +213,7 @@
     "genres_df = genres_df.str.split('/', expand = True)\n",
     "genres_df.columns = ['First', 'Second']\n",
     "\n",
-    "second_genre = genres_df['Second'].dropna()\n",
-    "\n",
-    "#print(genres_df)"
+    "second_genre = genres_df['Second'].dropna()"
    ]
   },
   {
@@ -272,9 +266,7 @@
     "genre_numbers_df.columns = ['Number of Movies']\n",
     "genre_numbers_df.sort_values('Number of Movies', ascending = False, inplace = True)\n",
     "genre_numbers_df.reset_index(level = 0, inplace = True)\n",
-    "genre_numbers_df = genre_numbers_df.rename(columns = {'index' : 'Genre'})\n",
-    "\n",
-    "#print(genre_numbers_df)"
+    "genre_numbers_df = genre_numbers_df.rename(columns = {'index' : 'Genre'})"
    ]
   },
   {
@@ -323,7 +315,7 @@
     "- Data are located in the left side.\n",
     "   \n",
     "- Scale of data: interval [0.0 – 2767891499.0] dollars.\n",
-    "  The spread of data is not really wide. Note that our data points, range from $0 up to $2767891499, \n",
+    "  The spread of data is not really wide. Note that our data points, range from $0 - $2767891499  \n",
     "     \n",
     "- The histogram is “skewed” , there is no-mirroring of the data. \n",
     "    \n",
@@ -749,8 +741,7 @@
    "source": [
     "Worldwide Gross and IMDB Votes Scatterplot   \n",
     "    \n",
-    "As we can see from the IMDB Votes – Worldwide Gross Scatterplot, there is a strong clustering in the \n",
-    "left corner of the axis. \n",
+    "As we can see from the IMDB Votes – Worldwide Gross Scatterplot, there is a strong clustering in the left corner of the axis. A positive correlation. \n",
     "As vote axis increases, gross axis looks to stay around the same values.\n",
     "Therefore, we could make a hypothesis that says: “ Movies are more popular online “. "
    ]
@@ -938,9 +929,7 @@
    "source": [
     "#concatenating RTRating with IMDBRating into one DataFrame\n",
     "rtr_imdbr_df = pd.concat([pd.DataFrame(rtr), pd.DataFrame(imdbr)], axis =1)\n",
-    "rtr_imdbr_df.dropna(inplace=True)\n",
-    "\n",
-    "#print(rtr_imdbr_df)"
+    "rtr_imdbr_df.dropna(inplace=True)"
    ]
   },
   {
@@ -1231,9 +1220,7 @@
     "m_gross_genre1_df = m_gross_genre1_df.append(m_gross_genre2_df, ignore_index = True)\n",
     "m_gross_genre1_df = m_gross_genre1_df.rename(columns = {'Genre1' : 'Genre', 'Gross' : 'Mean Gross'})\n",
     "\n",
-    "m_gross_genre1_df.sort_values('Mean Gross', ascending = False, inplace = True)\n",
-    "\n",
-    "#print(m_gross_genre1_df)"
+    "m_gross_genre1_df.sort_values('Mean Gross', ascending = False, inplace = True)"
    ]
   },
   {
@@ -1252,9 +1239,7 @@
     "std_gross_genre2_df = std_gross_genre2_df.rename(columns = {'Genre2' : 'Genre1'})\n",
     "\n",
     "std_gross_genre1_df = std_gross_genre1_df.append(std_gross_genre2_df, ignore_index = True)\n",
-    "std_gross_genre1_df = std_gross_genre1_df.rename(columns = {'Genre1' : 'Genre', 'Gross' : 'Std Gross'})\n",
-    "\n",
-    "#print(std_gross_genre1_df)"
+    "std_gross_genre1_df = std_gross_genre1_df.rename(columns = {'Genre1' : 'Genre', 'Gross' : 'Std Gross'})"
    ]
   },
   {
@@ -1269,9 +1254,7 @@
    "source": [
     "#calculating the confidence intervals ci lower and ci upper \n",
     "conf_int = stats.norm.interval(0.95, loc = m_gross_genre1_df['Mean Gross'], scale = std_gross_genre1_df['Std Gross']/np.sqrt(std_gross_genre1_df['Std Gross'].count()))\n",
-    "conf_int = np.array(conf_int)\n",
-    "\n",
-    "#print(conf_int)"
+    "conf_int = np.array(conf_int)"
    ]
   },
   {
@@ -1287,9 +1270,7 @@
     "# putting ci lower and ci upper in our m_gross_genre1_df DataFrame\n",
     "m_gross_genre1_df['Bottom Error Ci'] = conf_int[0]\n",
     "m_gross_genre1_df['Top Error Ci'] = conf_int[1]\n",
-    "m_gross_genre1_df.reset_index(drop = True, inplace = True)\n",
-    "\n",
-    "#print(m_gross_genre1_df)"
+    "m_gross_genre1_df.reset_index(drop = True, inplace = True)"
    ]
   },
   {
@@ -1514,7 +1495,7 @@
     "Production Budget and Worldwide Gross Scatterplot\n",
     "\n",
     "Scatterplot gives us a first thought that the bigger the budget the better the gross ( le8 vs le9). \n",
-    "It follows a weak linear positive correlation, data points are less as budget goes up. \n",
+    "It follows linear positive correlation. However, data points are less as budget goes up. \n",
     "Most of the data points are clustered in the left down corner.\n"
    ]
   },
@@ -1744,9 +1725,7 @@
     "ratings_dates_df.reset_index(level = 0, inplace = True)\n",
     "ratings_dates_df = ratings_dates_df.rename(columns = {'Date' : 'Decade'})\n",
     "\n",
-    "ratings_dates_df = pd.melt(ratings_dates_df, id_vars = 'Decade', var_name = 'Website', value_name = 'Rating')\n",
-    "\n",
-    "#print(ratings_dates_df)"
+    "ratings_dates_df = pd.melt(ratings_dates_df, id_vars = 'Decade', var_name = 'Website', value_name = 'Rating')"
    ]
   },
   {
