--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -386,13 +386,13 @@
    "source": [
     "Skewed Non-Symmetric Normal moderate-tailed Histogram ----follows Normal Distribution----\n",
     "  \n",
-    "- Data are normally distributed with a litle skewness to the right. IMDB Ratings follow the normal \n",
+    "- Data are normally distributed with a litle skewness to the left. IMDB Ratings follow the normal \n",
     "  distribution, centrality is around 6 and 7 points and as we can see there is a tendency for higher \n",
     "  voting than lower.\n",
     "      \n",
     "- Scale of data : interval [1.4, 9.2] points**. We managed to contain the whole scale.\n",
     "    \n",
-    "- There is a litle right skewness and we conclude that most ratings tend to be higher than the middle rating \n",
+    "- There is a litle left skewness and we conclude that most ratings tend to be higher than the middle rating \n",
     "  point of the scale (that is, number 5)."
    ]
   },
